--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -30,7 +30,7 @@
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-button type="button" (click)="onSwitchAuthMode()" fill="clear" expand="full">Switch to {{ isLogin? 'SignUp' : 'Login' }}</ion-button>
-          <ion-button [disabled]="!form.valid" type="submit" (click)="onLogin()" expand="block">Login</ion-button>
+          <ion-button [disabled]="!form.valid" type="submit" expand="block">{{isLogin? 'Login' : 'Signup'}}</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
