--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-segment color="primary" value="all" (ionChange)="onFilterUpdate($event.detail.value)">
+  <ion-segment color="primary" value="all" (ionChange)="onFilterUpdateEvent($event.detail.value)">
     <ion-segment-button value="all">All Places</ion-segment-button>
     <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
   </ion-segment>
@@ -20,7 +20,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-grid *ngIf="!isLoading && (relevantPlaces <= 0 || !relevantPlaces)">
+  <ion-grid *ngIf="!isLoading && (!relevantPlaces || relevantPlaces.length <= 0)">
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
         <p>There are no bookable places right now, please come back later!</p>
