--- a/src/app/shared/pickers/location-picker/location-picker.component.html
+++ b/src/app/shared/pickers/location-picker/location-picker.component.html
@@ -1,7 +1,8 @@
 <div class="picker">
   <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
-  <ion-img class="location-image" role="button" (click)="onPickLocation()" [src]="selectedLocationImage" *ngIf="selectedLocationImage && !isLoading"></ion-img>
-  <ion-button color="primary" (click)="onPickLocation()" *ngIf="!selectedLocationImage && !isLoading">
+  <ion-img class="location-image" role="button" (click)="onPickLocation()"
+           [src]="selectedLocationImage" *ngIf="selectedLocationImage && !isLoading && showPreview"></ion-img>
+  <ion-button color="primary" (click)="onPickLocation()" *ngIf="(!selectedLocationImage || !showPreview) && !isLoading">
     <ion-label> Select location </ion-label>
     <ion-icon name="map" slot="start"></ion-icon>
   </ion-button>
